<resources>
    <string name="app_name">Connect4App</string>

    <!-- Missatges primeara activity -->
    <string name="startButton">Start Game</string>
    <string name="helpButton">Help</string>
    <string name="exitButton">Exit</string>

    <string name="messageMainPage">Main Page</string>
    <string name="messageHelpPage">Help</string>
    <string name="messageConfiguration">Configuration</string>

    <!-- Missatges activity help -->
    <string name="instructions">L objectiu de Connecta 4 és alinear 4 fitxes sobre
        un tauler. Per torns, els jugadors han d introduir una fitxa a la columna que prefereixin
        (sempre que no estigui completa) i aquesta caurà a la posició més baixa.
        Guanya la partida el primer que aconsegueixi alinear 4 fitxes
        consecutives d un mateix color en horitzontal, vertical o diagonal.</string>
    <string name="missatgeAlies">Your nickname</string>
    <string name="messageResults">Results</string>
    <string name="emptyAlias">\You did not enter a username</string>
    <string name="fullColumn">The column is full chose another</string>
    <string name="LogTitle">LOG...</string>
    <string name="consult">See games</string>
    <string name="back">Back</string>
    <string name="back2">Back</string>

    <string name="player">Player</string>
    <string name="gamesButton">See Games</string>
</resources>
