<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/startButton" />

        <Button
            android:id="@+id/buttonHelp"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/helpButton" />

        <Button
            android:id="@+id/buttonGames"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/consult" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/exitButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/minimal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:src="@drawable/connect4image" />

        <TextView
            android:id="@+id/messageMainPage"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:text="@string/messageMainPage"
            android:textColor="#000000"
            android:textSize="32dp"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/minimal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>